--- a/Makefile.common
+++ b/Makefile.common
@@ -393,3 +393,4 @@ docker-%:
 
 prune:
 	docker images | grep :5000/ | grep -E 'weeks|days' | awk '{print $$1 ":" $$2}' | runmany 'docker rmi $$1'
+	docker system prune -f
