--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -156,109 +156,9 @@ jobs:
           earthly --strict --push --no-output \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-all-dev \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:main-all-dev' \
           	+build-dev --image ghcr.io/${GITHUB_REPOSITORY}:${TAG}-dev
-  build_amd_k3d:
-    runs-on: ubuntu-latest
-    env:
-      FORCE_COLOR: 1
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
-      - name: Build amd k3d target
-        run: |-
-          earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d \
-          	+build-amd-k3d
-  build_arm_k3d:
-    runs-on: ubuntu-latest
-    env:
-      FORCE_COLOR: 1
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
-      - name: Build arm k3d target
-        run: |-
-          earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d \
-          	+build-arm-k3d
   publish_k3d:
     runs-on: ubuntu-latest
     env:
@@ -307,7 +207,59 @@ jobs:
         run: |-
           earthly --strict --push --no-output \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-all-k3d \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:main-all-k3d' \
           	+build-k3d --image ghcr.io/${GITHUB_REPOSITORY}:${TAG}-k3d
+  publish_caddy:
+    runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: 1
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Put back the git branch into git (Earthly uses it for tagging)
+        run: |-
+          branch=""
+          if [ -n "$GITHUB_HEAD_REF" ]; then
+            branch="$GITHUB_HEAD_REF"
+            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
+            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
+          else
+            branch="${GITHUB_REF_NAME}"
+            echo "BRANCH=${branch}" >> $GITHUB_ENV
+            echo "TAG=latest" >> $GITHUB_ENV
+          fi
+
+          git checkout -b "$branch" || true
+
+          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
+            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          fi
+
+          git config --unset http.https://github.com/.extraheader
+      - name: Login to Packages Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: not-used
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download latest earthly
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: all
+      - name: Publish images
+        run: |-
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-all-caddy \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:main-all-caddy' \
+          	+build-caddy --image ghcr.io/${GITHUB_REPOSITORY}:${TAG}-caddy
