--- a/Makefile.common
+++ b/Makefile.common
@@ -357,7 +357,7 @@ nix-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --no-daemon --no-modify-profile
 
 nix-install:
-	n profile install nixpkgs\#{glibcLocales,powerline-go,rsync,gnupg,pinentry,pass,git-crypt,docker,docker-credential-helpers,vault}
+	n profile install nixpkgs\#{glibcLocales,powerline-go,rsync,gnupg,pinentry,pass,git-crypt,docker,docker-credential-helpers,vault,nix-direnv}
 	n profile install github:defn/pkg?{dir=tilt\&ref=v0.0.2,dir=caddy\&ref=v0.0.1,dir=temporalite\&ref=v0.0.1,dir=kubectl\&ref=v0.0.1}
 
 nix-gc:
