share $HOME/dev

--- a/etc/flake.nix.template
+++ b/etc/flake.nix.template
@@ -2,12 +2,14 @@
   inputs = {
     nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
     flake-utils.url = "github:numtide/flake-utils";
+    home.url = "path:/home/ubuntu/dev";
   };
 
   outputs =
     { self
     , nixpkgs
     , flake-utils
+    , home
     }:
     flake-utils.lib.eachDefaultSystem (system:
     let
@@ -16,7 +18,8 @@
     {
       devShell = pkgs.mkShell {
         buildInputs = [
-          pkgs.bash
+          home.defaultPackage.${system}
+          pkgs.vim
         ];
       };
     });
