--- a/Makefile.common
+++ b/Makefile.common
@@ -108,7 +108,7 @@ install-inner:
 	npm install
 
 	$(MAKE) install-site
-	
+
 tilt up:
 	pass hello
 	tilt up --context k3d-control --port $(tilt_port) --host 127.0.0.1 --stream
@@ -354,7 +354,7 @@ nix-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --no-daemon --no-modify-profile
 
 nix-install:
-	. /home/ubuntu/.nix-profile/etc/profile.d/nix.sh && nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs\#{nix-direnv,direnv,pinentry,powerline-go,vim}
+	. /home/ubuntu/.nix-profile/etc/profile.d/nix.sh && nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs\#{nix-direnv,direnv,pinentry,powerline-go,vim,git-crypt,pre-commit}
 
 nix-gc:
 	nix-store --gc
