--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,4 @@
+# gcloud local auth
 http://localhost:18085 {
 	reverse_proxy http://localhost:8085
 }
@@ -7,7 +8,85 @@ http://localhost {
 		reverse_proxy http://localhost:8888
 	}
 
-	reverse_proxy http://localhost:7999
+	handle_path /dev/proxy/10350/ {
+		redir {scheme}://dev-10350.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10351/ {
+		redir {scheme}://dev-10351.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10352/ {
+		redir {scheme}://dev-10352.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10353/ {
+		redir {scheme}://dev-10353.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10354/ {
+		redir {scheme}://dev-10354.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10355/ {
+		redir {scheme}://dev-10355.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10356/ {
+		redir {scheme}://dev-10356.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10357/ {
+		redir {scheme}://dev-10357.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10358/ {
+		redir {scheme}://dev-10358.127.0.0.1.sslip.io
+	}
+
+	handle_path /dev/proxy/10359/ {
+		redir {scheme}://dev-10359.127.0.0.1.sslip.io
+	}
+}
+
+http://dev-10350.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10350
+}
+
+http://dev-10351.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10351
+}
+
+http://dev-10352.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10352
+}
+
+http://dev-10353.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10353
+}
+
+http://dev-10354.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10354
+}
+
+http://dev-10355.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10355
+}
+
+http://dev-10356.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10356
+}
+
+http://dev-10357.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10357
+}
+
+http://dev-10358.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10358
+}
+
+http://dev-10359.127.0.0.1.sslip.io {
+	reverse_proxy http://localhost:10359
 }
 
 https://*.*.ts.net,
