--- a/Makefile.common
+++ b/Makefile.common
@@ -10,7 +10,6 @@ app ?= $(shell pwd)/app
 node ?= k3d-control-server-0
 n ?=
 k ?=
-pp ?= glibcLocales k9s powerline-go htop screen jo vim entr gron fzf jq git less wget rsync curl unzip pass socat vault shfmt shellcheck oras docker containerd man groff aws-vault netcat-openbsd xdg-utils xz bind gnumake gnupg pinentry google-cloud-sdk awscli2 iputils yq pre-commit httpie docker-credential-helpers nixpkgs-fmt coreutils findutils diffutils
 r ?= bash
 
 dummy_ip ?= 169.254.32.1
@@ -353,7 +352,7 @@ nix-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --no-daemon --no-modify-profile
 
 nix-install:
-	. /home/ubuntu/.nix-profile/etc/profile.d/nix.sh && nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs\#{nix-direnv,direnv,pinentry,pass,gnupg,powerline-go,vim,git-crypt,pre-commit}
+	. /home/ubuntu/.nix-profile/etc/profile.d/nix.sh && nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs\#{nix-direnv,direnv,pinentry,pass,gnupg,powerline-go,vim,git-crypt}
 
 nix-gc:
 	nix-store --gc
