prune earthly too

--- a/Makefile.common
+++ b/Makefile.common
@@ -362,5 +362,6 @@ nix:
 	export LC_ALL=C.UTF-8 && . /home/ubuntu/.nix-profile/etc/profile.d/nix.sh && $(MAKE) nix-install
 
 prune:
-	docker images | grep :5000/ | grep -E 'weeks|days' | awk '{print $$1 ":" $$2}' | runmany 'docker rmi $$1'
-	docker system prune -f
+	-docker images | grep :5000/ | grep -E 'weeks|days' | awk '{print $$1 ":" $$2}' | runmany 'docker rmi $$1'
+	-docker system prune -f
+	-earthly prune
