just use dc1 for now

--- a/etc/nomad.conf
+++ b/etc/nomad.conf
@@ -1,7 +1,5 @@
-# nomad job run etc/raw_exec.nomad
-# nomad job run etc/docker.nomad
-
-datacenter = "dev"
+# nomad job run -address=http://the.tiger-mamba.ts.net:4646 etc/raw_exec.nomad
+# nomad job run -address=http://the.tiger-mamba.ts.net:4646 etc/docker.nomad
 
 bind_addr = "0.0.0.0"
 
