--- a/.config/direnv/direnv.toml
+++ b/.config/direnv/direnv.toml
@@ -9,3 +9,17 @@ load_dotenv = true
 strict_env = false
 
 warn_timeout = "60s"
+
+[whitelist]
+prefix = [ 
+    "/home/ubuntu/work/pkg",
+    "/home/ubuntu/work/lib",
+    "/home/ubuntu/pkg",
+    "/home/ubuntu/lib",
+    "/work/pkg",
+    "/work/lib"
+]
+
+exact = [
+    "/home/ubuntu"
+]
