--- a/Makefile.common
+++ b/Makefile.common
@@ -363,3 +363,11 @@ prune:
 	-docker images | grep :5000/ | grep -E 'weeks|days' | awk '{print $$1 ":" $$2}' | runmany 'docker rmi $$1'
 	-docker system prune -f
 	-earthly prune
+
+wg-up:
+	pass wg_client | base64 -d | sudo tee /etc/wireguard/wg0.conf > /dev/null
+	sudo wg-quick up wg0
+	dig @$(shell sudo cat /etc/wireguard/wg0.conf | grep AllowedIPs | awk '{print $$3}' | cut -d/ -f1)3 +noall +answer _apps.internal txt
+
+wg-down:
+	sudo wg-quick down wg0
