--- a/.config/direnv/direnv.toml
+++ b/.config/direnv/direnv.toml
@@ -14,10 +14,13 @@ warn_timeout = "60s"
 prefix = [
     "/home/ubuntu/work/pkg",
     "/home/ubuntu/work/lib",
+    "/home/ubuntu/work/app",
     "/home/ubuntu/pkg",
     "/home/ubuntu/lib",
+    "/home/ubuntu/app",
     "/work/pkg",
-    "/work/lib"
+    "/work/lib",
+    "/work/app" 
 ]
 
 exact = [
