--- a/Caddyfile
+++ b/Caddyfile
@@ -3,6 +3,12 @@ http://localhost:18085 {
 	reverse_proxy http://localhost:8085
 }
 
+http://*.fly.dev {
+	handle_path /dev/* {
+		reverse_proxy http://localhost:8888
+	}
+}
+
 http://localhost {
 	handle_path /dev/* {
 		reverse_proxy http://localhost:8888
@@ -98,26 +104,6 @@ http://control-0 {
 		reverse_proxy http://localhost:8888
 	}
 
-	handle_path /vc0/* {
-		reverse_proxy http://localhost:8100
-	}
-
-	handle_path /vc1/* {
-		reverse_proxy http://localhost:8101
-	}
-
-	handle_path /vc2/* {
-		reverse_proxy http://localhost:8102
-	}
-
-	handle_path /vc3/* {
-		reverse_proxy http://localhost:8103
-	}
-
-	handle_path /vc4/* {
-		reverse_proxy http://localhost:8104
-	}
-
 	handle_path /api/* {
 		reverse_proxy http://localhost:3000
 	}
@@ -197,8 +183,6 @@ http://control-0 {
 	handle_path /dev/proxy/10359/ {
 		redir http://{host}:10359
 	}
-
-	reverse_proxy http://localhost:8000
 }
 
 https://*.*.ts.net:20000 {
