--- a/Makefile.common
+++ b/Makefile.common
@@ -56,6 +56,8 @@ install:
 install-inner:
 	$(MAKE) symlinks perms
 
+	$(MAKE) nix-install || $(MAKE) nix-reinstall
+
 	mark -- configure password-store, gpg
 	mkdir -p ~/work/password-store
 
@@ -344,7 +346,6 @@ nix-gc:
 
 nix:
 	export LC_ALL=C.UTF-8 && if ! test -x /home/ubuntu/.nix-profile/bin/nix; then $(MAKE) nix-bootstrap; fi
-	export LC_ALL=C.UTF-8 && . /home/ubuntu/.nix-profile/etc/profile.d/nix.sh && $(MAKE) nix-install
 
 prune:
 	-docker images | grep :5000/ | grep -E 'weeks|days' | awk '{print $$1 ":" $$2}' | runmany 'docker rmi $$1'
