first pass at macos merge

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,64 @@ etc/tailscale_*
 .direnv
 result
 nix-support
+
+# external
+.password-store
+.ssh
+.asdf
+tmp
+work
+
+# working files
+.bash_history
+.bash_sessions
+.viminfo
+.vscode
+.python_history
+.local
+.cache
+.npm
+.docker
+.tilt-dev
+.config
+.kube
+.lesshst
+.cups
+.k3d
+.fly
+.ctl
+.irssi
+.localized
+.*.key
+.zsh_history
+.zsh_sessions
+.earthly
+
+# macos
+Applications/
+Desktop/
+Documents/
+Downloads/
+Library/
+Movies/
+Music/
+Pictures/
+Public/
+.Trash/
+.CFUserTextEncoding
+.DS_Store
+.wget-hsts
+.loft
+.kuma
+.kumactl
+.rd
+.kuberlr
+.terraform*
+/go
+.swp
+.vim
+Brewfile.lock.json
+.nix-profile
+.direnv
+result
+
