--- a/Makefile.common
+++ b/Makefile.common
@@ -51,7 +51,7 @@ build:
 
 install:
 	-$(MAKE) nix-$(shell uname -s)
-	cd && . ~/.nix-profile/etc/profile.d/nix.sh && ~/bin/de ~ $(MAKE) install-inner
+	~/bin/de ~ $(MAKE) install-inner
 
 install-inner:
 	$(MAKE) symlinks perms
@@ -337,7 +337,7 @@ nix-Darwin-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --darwin-use-unencrypted-nix-store-volume --daemon
 
 nix-reinstall:
-	. ~/.nix-profile/etc/profile.d/nix.sh && nix profile list | tail +2 | awk '{print $$NF}' | xargs nix profile remove
+	nix profile list | tail +2 | awk '{print $$NF}' | xargs nix profile remove
 	$(MAKE) nix
 
 nix-gc:
@@ -345,10 +345,10 @@ nix-gc:
 
 nix-Linux:
 	export LC_ALL=C.UTF-8 && if ! test -x ~/.nix-profile/bin/nix; then $(MAKE) nix-Linux-bootstrap; fi
-	if test "$(shell which direnv pinentry | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && . ~/.nix-profile/etc/profile.d/nix.sh && nix install nixpkgs\#{nix-direnv,direnv,pinentry}; fi
+	if test "$(shell which direnv pinentry | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix install nixpkgs\#{nix-direnv,direnv,pinentry}; fi
 
 nix-Darwin:
-	if test "$(shell which direnv | wc -l)" != "1"; then export LC_ALL=C.UTF-8 && . ~/.nix-profile/etc/profile.d/nix.sh && nix install nixpkgs\#{nix-direnv,direnv}; fi
+	if test "$(shell which direnv | wc -l)" != "1"; then export LC_ALL=C.UTF-8 && nix install nixpkgs\#{nix-direnv,direnv}; fi
 	if ! test -L .nix-profile/bin/pinentry; then sudo ln -nfs $(shell which pinentry-mac) .nix-profile/bin/pinentry; fi
 
 prune:
