--- a/Makefile.common
+++ b/Makefile.common
@@ -36,11 +36,11 @@ macos:
 
 symlinks:
 	mark -- configure symlinks
-	ln -nfs /work ~
+	if [[ "Linux" == "$(shell uname -s)" ]]; then ln -nfs /work ~; fi
 
 perms:
 	mark -- configure permissions
-	if test -S /var/run/docker.sock; then sudo chgrp ubuntu /var/run/docker.sock; sudo chmod 770 /var/run/docker.sock; fi
+	if [[ "Linux" == "$(shell uname -s)" ]]; then if test -S /var/run/docker.sock; then sudo chgrp ubuntu /var/run/docker.sock; sudo chmod 770 /var/run/docker.sock; fi; fi
 	if test -S /run/containerd/containerd.sock; then sudo chgrp ubuntu /run/containerd/containerd.sock; sudo chmod 770 /run/containerd/containerd.sock; fi
 	-chmod 0700 ~/.gnupg/. ~/.gnupg2/. ~/.password-store/home/.gnupg
 	-if ! test -f ~/.kube/config; then touch ~/.kube/config; fi
