--- a/Caddyfile
+++ b/Caddyfile
@@ -11,6 +11,10 @@ http://*.fly.dev {
 	handle_path /defn/* {
 		reverse_proxy http://localhost:8888
 	}
+
+	handle_path /defn-dev-*/* {
+		reverse_proxy http://localhost:8888
+	}
 }
 
 http://localhost {
