--- a/Makefile.common
+++ b/Makefile.common
@@ -63,8 +63,8 @@ install-inner:
 	$(MAKE) perms
 	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
-	docker docker context create pod --docker host=tcp://localhost:2375 || true \
-		&& context create host --docker host=unix:///var/run/docker.sock || true \
+	docker context create pod --docker host=tcp://localhost:2375 || true \
+		&& docker context create host --docker host=unix:///var/run/docker.sock || true \
         && docker context use host
 
 	mark -- configure repos
