--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
 enable-ssh-support
 default-cache-ttl 14400
 max-cache-ttl 28800
-pinentry-program /home/ubuntu/.nix-profile/bin/pinentry
+pinentry-program /usr/local/bin/pinentry
