add make release

--- a/Makefile.common
+++ b/Makefile.common
@@ -353,3 +353,6 @@ wg-up-inner:
 
 wg-down:
 	sudo wg-quick down wg0nix-bootstrap:
+
+release:
+         git tag $$(cat VERSION ); git push origin $$(cat VERSION )
