--- a/Makefile.common
+++ b/Makefile.common
@@ -42,7 +42,8 @@ perms:
 	mark -- configure permissions
 	if [[ "Linux" == "$(shell uname -s)" ]]; then if test -S /var/run/docker.sock; then sudo chgrp ubuntu /var/run/docker.sock; sudo chmod 770 /var/run/docker.sock; fi; fi
 	if test -S /run/containerd/containerd.sock; then sudo chgrp ubuntu /run/containerd/containerd.sock; sudo chmod 770 /run/containerd/containerd.sock; fi
-	-chmod 0700 ~/.gnupg/. ~/.gnupg2/. ~/.password-store/home/.gnupg
+	-chmod 0700 ~/.gnupg/. ~/.gnupg2/.
+	-if test -d ~/.password-store/home/.gnupg; then chmod 0700 ~/.password-store/home/.gnupg; fi
 	-if ! test -f ~/.kube/config; then touch ~/.kube/config; fi
 	-chmod 0600 ~/.kube/config
 
@@ -59,7 +60,7 @@ install-inner:
 	mark -- configure password-store, gpg
 	mkdir -p ~/work/password-store
 
-	rsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.
+	if test -d ~/.password-store/home/.gnupg; then rƒsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.; fi
 	$(MAKE) perms
 	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
@@ -100,7 +101,7 @@ login:
 manage:
 	mark -- manage clusters
 
-	for a in $$(env DOCKER_CONTEXT=host k3d cluster list | tail -n +2 | awk '{print $$1}'); do \
+	for a in $$(env DOCKER_CONTEXT=host k3d cluster list 2>/dev/null | tail -n +2 | awk '{print $$1}'); do \
 		argocd cluster add -y --upsert "k3d-$$a"; \
 		control apply -f "app/e/k3d-$$a.yaml"; \
 		if nc -z -v localhost 8200 2>/dev/null; then \
