--- a/Makefile.common
+++ b/Makefile.common
@@ -334,10 +334,10 @@ nix-gc:
 
 nix-Linux:
 	export LC_ALL=C.UTF-8 && if ! test -x ~/.nix-profile/bin/nix; then $(MAKE) nix-Linux-bootstrap; fi
-	if test "$(shell which direnv pinentry | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,pinentry}; fi
+	if test "$(shell which direnv pinentry | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,pinentry,nixpkgs-fmt}; fi
 
 nix-Darwin:
-	if test "$(shell which direnv | wc -l)" != "1"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv}; fi
+	if test "$(shell which direnv | wc -l)" != "1"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,nixpkgs-fmt}; fi
 	if ! test -L .nix-profile/bin/pinentry; then sudo ln -nfs $(shell which pinentry-mac) .nix-profile/bin/pinentry; fi
 
 prune:
