--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -1,4 +1,5 @@
 {
+    "files.autoSave": "on",
     "editor.formatOnSave": true,
     "editor.minimap.enabled": false,
     "extensions.ignoreRecommendations": true,
@@ -47,5 +48,6 @@
         "/home/ubuntu/.cache/**": true,
         "/home/ubuntu/.kube/cache/**": true,
         "/home/ubuntu/work/**": true
-    }
+    },
+    "nix.formatterPath": "~/.nix-profile/bin/nixpkgs-fmt"
 }
