--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,10 @@
 {
-    "image": "ghcr.io/defn/dev:latest-devcontainer"
+	"image": "ghcr.io/defn/dev:latest-devcontainer",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"vscodevim.vim"
+			]
+		}
+	}
 }
