adopt codespaces dotfiles for customization

--- a/Makefile.common
+++ b/Makefile.common
@@ -82,6 +82,9 @@ install-inner:
 	npm install npm@latest
 	npm install
 
+	mark -- dotfiles
+	if test -x work/.codespaces/.persistedshare/dotfiles/script/bootstrap; then work/.codespaces/.persistedshare/dotfiles/script/bootstrap; fi
+
 down:
 	touch .local/share/code-server/idle
 
