--- a/Makefile.common
+++ b/Makefile.common
@@ -36,7 +36,7 @@ macos:
 symlinks:
 	mark -- configure symlinks
 	if [[ "Linux" == "$(shell uname -s)" ]]; then \
-		if test -d /workspaces; then ln -nfs /workspaces work; else ln -nfs /work ~; fi; fi
+		if test -d /workspaces; then ln -nfs /workspaces work; sudo install -d -m 0755 -o ubuntu -g ubuntu /workspaces; else ln -nfs /work ~; fi; fi
 
 perms:
 	mark -- configure permissions
