mount the whole work

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,6 @@
 		}
 	},
   "mounts": [
-    "source=${localEnv:HOME}/work/password-store,target=/workspaces/password-store,type=bind,consistency=delegated",
-    "source=${localEnv:HOME}/work/.codespaces,target=/workspaces/.codespaces,type=bind,consistency=delegated"
+    "source=${localEnv:HOME}/work,target=/workspaces,type=bind,consistency=delegated"
   ]
 }
