mount nix, work as volumes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,8 @@
 		}
 	},
   "mounts": [
-    "source=${localEnv:HOME}/work,target=/workspaces,type=bind,consistency=delegated"
+    "source=${localEnv:HOME}/work,target=/workspaces,type=bind,consistency=delegated",
+    "source=work,target=/work",
+    "source=nix,target=/workspaces"
   ]
 }
