--- a/Makefile.common
+++ b/Makefile.common
@@ -326,7 +326,7 @@ nix-Darwin-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --darwin-use-unencrypted-nix-store-volume --daemon
 
 nix-reinstall:
-	nix profile list | tail +2 | awk '{print $$NF}' | xargs nix profile remove
+	nix profile list | tail -n +2 | awk '{print $$NF}' | xargs nix profile remove
 	$(MAKE) nix
 
 nix-gc:
@@ -334,11 +334,11 @@ nix-gc:
 
 nix-Linux:
 	export LC_ALL=C.UTF-8 && if ! test -x ~/.nix-profile/bin/nix; then $(MAKE) nix-Linux-bootstrap; fi
-	if test "$(shell which direnv pinentry | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,pinentry,nixpkgs-fmt}; fi
+	if test "$(shell which direnv pinentry nixpkgs-fmt | wc -l)" != "3"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,pinentry,nixpkgs-fmt}; fi
 
 nix-Darwin:
-	if test "$(shell which direnv | wc -l)" != "1"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,nixpkgs-fmt}; fi
-	if ! test -L .nix-profile/bin/pinentry; then sudo ln -nfs $(shell which pinentry-mac) .nix-profile/bin/pinentry; fi
+	if test "$(shell which direnv pinentry nixpkgs-fmt | wc -l)" != "3"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,pinentry,nixpkgs-fmt}; fi
+	sudo ln -nfs $(shell which pinentry-mac) .nix-profile/bin/pinentry
 
 prune:
 	-docker images | grep :5000/ | grep -E 'weeks|days' | awk '{print $$1 ":" $$2}' | runmany 'docker rmi $$1'
