--- a/Makefile.common
+++ b/Makefile.common
@@ -39,6 +39,7 @@ symlinks:
 		if test -d /workspaces; then ln -nfs /workspaces work; sudo install -d -m 0755 -o ubuntu -g ubuntu /workspaces; else ln -nfs /work work; fi; \
 		sudo chown ubuntu:ubuntu work/.; fi
 	mkdir -p work/.codespaces/.persistedshare
+	bash -x bin/persist-cache
 
 perms:
 	mark -- configure permissions
