--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -49,5 +49,6 @@
         "/home/ubuntu/.kube/cache/**": true,
         "/home/ubuntu/work/**": true
     },
-    "nix.formatterPath": "/home/ubuntu/.nix-profile/bin/nixpkgs-fmt"
+    "nix.formatterPath": "/home/ubuntu/.nix-profile/bin/nixpkgs-fmt",
+    "terraform.languageServer.enable": false
 }
