--- a/.envrc
+++ b/.envrc
@@ -2,3 +2,6 @@ use flake
 if test -f /app/flake.nix; then use flake path:/app; fi
 
 PATH="$HOME/bin:$PATH"
+
+export CACHIX_AUTH_TOKEN="$(pass CACHIX_AUTH_TOKEN)"
+export CACHIX_SIGNING_KEY="$(pass CACHIX_SIGNING_KEY)"
