--- a/.config/nix/nix.conf
+++ b/.config/nix/nix.conf
@@ -1,3 +1,4 @@
 experimental-features = nix-command flakes
-substituters = https://cache.nixos.org https://defn.cachix.org
+substituters = https://cache.nixos.org https://defn.cachix.org file:///tmp/cache/nix
+trusted-substituters = file:///tmp/cache/nix
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA=
